--- a/src/2_Domain/2.3_GeoLocation/CrossBackEnd.GeoLocation.Infra.Client.IoC/CrossBackEnd.GeoLocation.Infra.Client.IoC.csproj
+++ b/src/2_Domain/2.3_GeoLocation/CrossBackEnd.GeoLocation.Infra.Client.IoC/CrossBackEnd.GeoLocation.Infra.Client.IoC.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
+  </ItemGroup>
+
 </Project>
