--- a/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows.IoC/CrossBackEnd.UI.Desktop.Windows.IoC.csproj
+++ b/src/1_Presentation/1.4_Desktop/Windows/CrossBackEnd.UI.Desktop.Windows.IoC/CrossBackEnd.UI.Desktop.Windows.IoC.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\2_Domain\2.3_GeoLocation\CrossBackEnd.GeoLocation.Infra.Client.Data\CrossBackEnd.GeoLocation.Infra.Client.Data.csproj" />
     <ProjectReference Include="..\..\..\1.1_CrossPlatform\CrossBackEnd.CrossPlatform.Abstractions\CrossBackEnd.CrossPlatform.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\1.1_CrossPlatform\CrossBackEnd.CrossPlatform.Core\CrossBackEnd.CrossPlatform.Core.csproj" />
   </ItemGroup>
