--- a/src/2_Domain/2.1_Shared/CrossBackEnd.Shared.Infra.IoC/CrossBackEnd.Shared.Infra.IoC.csproj
+++ b/src/2_Domain/2.1_Shared/CrossBackEnd.Shared.Infra.IoC/CrossBackEnd.Shared.Infra.IoC.csproj
@@ -6,14 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="2.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CrossBackEnd.CrossPlatform.Abstractions\CrossBackEnd.CrossPlatform.Abstractions.csproj" />
-    <ProjectReference Include="..\CrossBackEnd.CrossPlatform.Core\CrossBackEnd.CrossPlatform.Core.csproj" />
   </ItemGroup>
 
 </Project>
