--- a/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.Infra.IoC/CrossBackEnd.CrossPlatform.Infra.IoC.csproj
+++ b/src/1_Presentation/1.1_CrossPlatform/CrossBackEnd.CrossPlatform.Infra.IoC/CrossBackEnd.CrossPlatform.Infra.IoC.csproj
@@ -6,9 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
